# AI-journal

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  character_setting.py  journal_generator.py  main.py  persona.md  prompt_builder.py  prompt_templates.py  prompts.md  pyproject.toml  web_ui.py
config/: persona.md  prompts.md
docs/: README.md
src/: __init__.py
src/builders/: __init__.py  prompt_builder.py
src/generators/: __init__.py  journal_generator.py
src/input/: __init__.py  character_setting.py
src/templates/: __init__.py  prompt_templates.py
src/utils/: __init__.py  env_utils.py  text_utils.py
src/viewer/: __init__.py  comment_repository.py  journal_repository.py  markdown_renderer.py  persona_reply_service.py
tests/: __init__.py  test_character_setting.py  test_comment_repository.py  test_journal_repository.py  test_markdown_output.py  test_markdown_renderer.py  test_persona_reply_service.py  test_web_ui_api.py  test_web_ui_error_chain.py
webapp/static/: styles.css
webapp/templates/: index.html
