[project]
name = "ai-journal"
version = "0.1.0"
description = "AI generate sf journal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
	"bleach>=6.2.0",
	"fastapi>=0.120.0",
	"jinja2>=3.1.6",
	"langchain>=0.3.0",
	"langchain-openai>=0.3.0",
	"markdown>=3.8",
	"python-multipart>=0.0.20",
	"python-dotenv>=1.1.0",
	"uvicorn>=0.37.0",
]
